more deterministic processing